{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 52,
  "lineage": "ddee74f8-cc11-cba1-8bbd-0af5778274d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minikube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05561ceba311a6c7b",
            "arn": "arn:aws:ec2:ap-south-1:304181605983:instance/i-027852012af8e8fb3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "minikube-obs-ec2-profile",
            "id": "i-027852012af8e8fb3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "minikube-obs-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c4d269669a21503a"
              }
            ],
            "primary_network_interface_id": "eni-0c4d269669a21503a",
            "private_dns": "ip-10-0-1-42.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-65-0-100-19.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.100.19",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008519711bd75c220",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e481d8ec8453566",
            "tags": {
              "Name": "minikube-obs-minikube-host"
            },
            "tags_all": {
              "Name": "minikube-obs-minikube-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-040d57f7f06ca2c50"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304181605983",
            "id": "i-027852012af8e8fb3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_cw_role",
            "aws_key_pair.deployer",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304181605983:internet-gateway/igw-0945c3dcec9b9546d",
            "id": "igw-0945c3dcec9b9546d",
            "owner_id": "304181605983",
            "region": "ap-south-1",
            "tags": {
              "Name": "minikube-obs-igw"
            },
            "tags_all": {
              "Name": "minikube-obs-igw"
            },
            "vpc_id": "vpc-006a23f31a401b219"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304181605983:route-table/rtb-001a3b9916daf9a8d",
            "id": "rtb-001a3b9916daf9a8d",
            "owner_id": "304181605983",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0945c3dcec9b9546d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minikube-obs-public-rt"
            },
            "tags_all": {
              "Name": "minikube-obs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a23f31a401b219"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304181605983",
            "id": "rtb-001a3b9916daf9a8d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a357c4cf99e5f8ad",
            "region": "ap-south-1",
            "route_table_id": "rtb-001a3b9916daf9a8d",
            "subnet_id": "subnet-00e481d8ec8453566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304181605983:security-group/sg-040d57f7f06ca2c50",
            "description": "Allow SSH and Minikube/Prometheus ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040d57f7f06ca2c50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 30001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus UI",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "minikube-obs-ec2-sg",
            "name_prefix": "",
            "owner_id": "304181605983",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "minikube-obs-ec2-sg"
            },
            "tags_all": {
              "Name": "minikube-obs-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a23f31a401b219"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304181605983",
            "id": "sg-040d57f7f06ca2c50",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304181605983:subnet/subnet-00e481d8ec8453566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e481d8ec8453566",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304181605983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "minikube-obs-public-subnet"
            },
            "tags_all": {
              "Name": "minikube-obs-public-subnet"
            },
            "vpc_id": "vpc-006a23f31a401b219"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304181605983",
            "id": "subnet-00e481d8ec8453566",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304181605983:vpc/vpc-006a23f31a401b219",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0382a8f86510df920",
            "default_route_table_id": "rtb-02454ec7ce8fc69ee",
            "default_security_group_id": "sg-07d18b7812bb036be",
            "dhcp_options_id": "dopt-096eb477caa526cfd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006a23f31a401b219",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02454ec7ce8fc69ee",
            "owner_id": "304181605983",
            "region": "ap-south-1",
            "tags": {
              "Name": "minikube-obs-vpc"
            },
            "tags_all": {
              "Name": "minikube-obs-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "304181605983",
            "id": "vpc-006a23f31a401b219",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}